--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,27 @@ img {
     float: right;
 }
 
+p {
+    color: hsl(229, 6%, 66%);
+    margin: 10px 0;
+    text-align: center;
+}
+
+h4 {
+    font-size: 18px;
+    font-weight: 600;
+    color: hsl(234, 12%, 34%);
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; 
+ }
+
 .title {
     font-weight: 200;
     line-height: 35px;
@@ -31,13 +52,8 @@ img {
     margin: 2px 10px;
     padding: 0;
 }
- p {
-     color: hsl(229, 6%, 66%);
-     margin: 10px 0;
-     text-align: center;
- }
 
- .main {
+.main {
      margin: 3%;
  }
 
@@ -73,21 +89,50 @@ img {
      box-shadow: 0 2px 15px 1px hsl(229, 6%, 66%);
  }
 
- h4 {
-     font-size: 18px;
-     font-weight: 600;
-     color: hsl(234, 12%, 34%);
-     margin: 0;
-     padding: 0;
- }
-
  .card-text {
      text-align: left;
  }
 
- footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem; 
+ @media only screen and (max-width: 375px) {
+
+    body {
+        margin: 0;
+    }
+
+    footer {
+        margin-top: 25px;
+        display: block;
+        position: relative;
+    }
+
+    .main {
+        margin-top: 100px;
+        padding: 0 10px;
+    }
+
+    .container {
+        margin-bottom: 40px;
+    }
+    
+    .title {
+        font-size: 24px;
+    }
+
+    .subtitle {
+        font-size: 24px;
+    }
+
+    .row {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .column {
+        margin: 0;
+    }
+
+    .card {
+        width: 80vw;
+        margin: 20px 0;
+    }
  }
