--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ footer {
     }
 
     footer {
-        margin-top: 25px;
+        margin: 25px 0;
         display: block;
         position: relative;
     }
