--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,12 @@ footer {
      text-align: left;
  }
 
+ @media only screen and (min-width: 900px) {
+     .opening-text {
+         width: 35%;
+     }
+ }
+
  @media only screen and (max-width: 375px) {
 
     body {
